[gd_scene load_steps=53 format=3 uid="uid://oyv4i7cvyykt"]

[ext_resource type="Script" uid="uid://cxcnx7rfof533" path="res://enemy.gd" id="1_nenq2"]
[ext_resource type="Texture2D" uid="uid://cxse4ittbeu2e" path="res://assets/Rogue Adventure World [Sprites]/Monsters/Enemy_06/Enemy_06_A/Enemy_06_A_Attack_1.png" id="2_i4rgx"]
[ext_resource type="Texture2D" uid="uid://cf6sxwq7oykig" path="res://assets/Rogue Adventure World [Sprites]/Monsters/Enemy_06/Enemy_06_A/Enemy_06_A_Walk_1.png" id="2_md484"]
[ext_resource type="Texture2D" uid="uid://bv13i3n7umcnr" path="res://assets/Rogue Adventure World [Sprites]/Monsters/Enemy_06/Enemy_06_A/Enemy_06_A_Attack_2.png" id="3_2mchx"]
[ext_resource type="Texture2D" uid="uid://cjn1d2xmwy0op" path="res://assets/Rogue Adventure World [Sprites]/Monsters/Enemy_06/Enemy_06_A/Enemy_06_A_Walk_2.png" id="3_ipns3"]
[ext_resource type="Texture2D" uid="uid://bwl0ueuutxest" path="res://assets/Rogue Adventure World [Sprites]/Monsters/Enemy_06/Enemy_06_A/Enemy_06_A_Walk_3.png" id="4_8qclf"]
[ext_resource type="Texture2D" uid="uid://cufnt06goksbh" path="res://assets/Rogue Adventure World [Sprites]/Monsters/Enemy_06/Enemy_06_A/Enemy_06_A_Attack_3.png" id="4_t3vcr"]
[ext_resource type="Texture2D" uid="uid://dqwwaeyukw35q" path="res://assets/Rogue Adventure World [Sprites]/Monsters/Enemy_06/Enemy_06_A/Enemy_06_A_Attack_4.png" id="5_qaulx"]
[ext_resource type="Texture2D" uid="uid://1rj7plhgj2ht" path="res://assets/Rogue Adventure World [Sprites]/Monsters/Enemy_06/Enemy_06_A/Enemy_06_A_Walk_4.png" id="5_w8i8w"]
[ext_resource type="Texture2D" uid="uid://cmyglid0vk526" path="res://assets/Rogue Adventure World [Sprites]/Monsters/Enemy_06/Enemy_06_A/Enemy_06_A_Attack_5.png" id="6_1f82d"]
[ext_resource type="Texture2D" uid="uid://crpja22bmbj0" path="res://assets/Rogue Adventure World [Sprites]/Monsters/Enemy_06/Enemy_06_A/Enemy_06_A_Walk_5.png" id="6_otmr2"]
[ext_resource type="Texture2D" uid="uid://bj2cbywhqj4xj" path="res://assets/Rogue Adventure World [Sprites]/Monsters/Enemy_06/Enemy_06_A/Enemy_06_A_Attack_6.png" id="7_lioqc"]
[ext_resource type="Texture2D" uid="uid://dco87dhrf2ag4" path="res://assets/Rogue Adventure World [Sprites]/Monsters/Enemy_06/Enemy_06_A/Enemy_06_A_Walk_6.png" id="7_wtq4b"]
[ext_resource type="Texture2D" uid="uid://buisb4v73036e" path="res://assets/Rogue Adventure World [Sprites]/Monsters/Enemy_06/Enemy_06_A/Enemy_06_A_Damage_1.png" id="8_0lg75"]
[ext_resource type="Texture2D" uid="uid://dhgt6xjy00cv8" path="res://assets/Rogue Adventure World [Sprites]/Monsters/Enemy_06/Enemy_06_A/Enemy_06_A_Damage_2.png" id="9_lsnsy"]
[ext_resource type="Texture2D" uid="uid://cl8p30v5o6kmj" path="res://assets/Rogue Adventure World [Sprites]/Monsters/Enemy_06/Enemy_06_A/Enemy_06_A_Damage_3.png" id="10_thsr5"]
[ext_resource type="Texture2D" uid="uid://dxv7etrptd3c6" path="res://assets/Rogue Adventure World [Sprites]/Monsters/Enemy_06/Enemy_06_A/Enemy_06_A_Damage_4.png" id="11_ekh6n"]
[ext_resource type="Texture2D" uid="uid://c241g6iwqryoa" path="res://assets/Rogue Adventure World [Sprites]/Monsters/Enemy_06/Enemy_06_A/Enemy_06_A_Damage_5.png" id="12_2sbpf"]
[ext_resource type="Texture2D" uid="uid://ctxqmrl55y3of" path="res://assets/Rogue Adventure World [Sprites]/Monsters/Enemy_06/Enemy_06_A/Enemy_06_A_Damage_6.png" id="13_78kod"]
[ext_resource type="Texture2D" uid="uid://dky731wgtplp1" path="res://assets/Rogue Adventure World [Sprites]/Monsters/Enemy_06/Enemy_06_A/Enemy_06_A_Dead_1.png" id="14_605iw"]
[ext_resource type="Texture2D" uid="uid://b3c4yya4u45xe" path="res://assets/Rogue Adventure World [Sprites]/Monsters/Enemy_06/Enemy_06_A/Enemy_06_A_Dead_2.png" id="15_x6q4o"]
[ext_resource type="Texture2D" uid="uid://b7u211cyw5gp8" path="res://assets/Rogue Adventure World [Sprites]/Monsters/Enemy_06/Enemy_06_A/Enemy_06_A_Dead_3.png" id="16_2tuss"]
[ext_resource type="Texture2D" uid="uid://bdp72uixqigb0" path="res://assets/Rogue Adventure World [Sprites]/Monsters/Enemy_06/Enemy_06_A/Enemy_06_A_Dead_4.png" id="17_7v6cf"]
[ext_resource type="Texture2D" uid="uid://l4sv242m71u0" path="res://assets/Rogue Adventure World [Sprites]/Monsters/Enemy_06/Enemy_06_A/Enemy_06_A_Dead_5.png" id="18_vab5u"]
[ext_resource type="Texture2D" uid="uid://l2qi6ui1c6dr" path="res://assets/Rogue Adventure World [Sprites]/Monsters/Enemy_06/Enemy_06_A/Enemy_06_A_Dead_6.png" id="19_qiusc"]

[sub_resource type="AtlasTexture" id="AtlasTexture_5ie7m"]
atlas = ExtResource("2_i4rgx")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ya47j"]
atlas = ExtResource("3_2mchx")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hyejq"]
atlas = ExtResource("4_t3vcr")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j0dkt"]
atlas = ExtResource("5_qaulx")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sdxul"]
atlas = ExtResource("6_1f82d")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e7lhw"]
atlas = ExtResource("7_lioqc")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gst0f"]
atlas = ExtResource("8_0lg75")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sm4rh"]
atlas = ExtResource("9_lsnsy")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5lniq"]
atlas = ExtResource("10_thsr5")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7w3jn"]
atlas = ExtResource("11_ekh6n")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uiwvf"]
atlas = ExtResource("12_2sbpf")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0pw1s"]
atlas = ExtResource("13_78kod")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b5geg"]
atlas = ExtResource("14_605iw")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g0yyi"]
atlas = ExtResource("15_x6q4o")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5utat"]
atlas = ExtResource("16_2tuss")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0b4fd"]
atlas = ExtResource("17_7v6cf")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_13roy"]
atlas = ExtResource("18_vab5u")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a5akt"]
atlas = ExtResource("19_qiusc")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j0cyh"]
atlas = ExtResource("2_md484")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g0wcc"]
atlas = ExtResource("3_ipns3")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s1ycm"]
atlas = ExtResource("4_8qclf")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_shcg2"]
atlas = ExtResource("5_w8i8w")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ile5s"]
atlas = ExtResource("6_otmr2")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1x4g4"]
atlas = ExtResource("7_wtq4b")
region = Rect2(0, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_2pwtc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ie7m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ya47j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hyejq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j0dkt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sdxul")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e7lhw")
}],
"loop": true,
"name": &"attack_right",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gst0f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sm4rh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5lniq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7w3jn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uiwvf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0pw1s")
}],
"loop": true,
"name": &"damage_right",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b5geg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g0yyi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5utat")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0b4fd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_13roy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a5akt")
}],
"loop": true,
"name": &"dead",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j0cyh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g0wcc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s1ycm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_shcg2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ile5s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1x4g4")
}],
"loop": true,
"name": &"walk",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_rogs8"]
radius = 8.0

[sub_resource type="CircleShape2D" id="CircleShape2D_wrm80"]

[node name="Enemy" type="CharacterBody2D"]
z_index = 1
collision_layer = 2
collision_mask = 5
script = ExtResource("1_nenq2")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 1
position = Vector2(0, -16)
sprite_frames = SubResource("SpriteFrames_2pwtc")
animation = &"damage_right"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -4)
shape = SubResource("CircleShape2D_rogs8")

[node name="AttackArea" type="Area2D" parent="."]
z_index = 1
collision_layer = 2
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(0, -4)
shape = SubResource("CircleShape2D_wrm80")

[node name="HealthDisplay" type="Node2D" parent="."]
z_index = 2
position = Vector2(0, -36)

[node name="HealthBar" type="ProgressBar" parent="HealthDisplay"]
offset_right = 30.0
offset_bottom = 5.0
show_percentage = false

[node name="NameLabel" type="Label" parent="HealthDisplay"]
offset_left = -15.0
offset_top = -7.0
offset_right = 41.0
offset_bottom = 7.0
theme_override_font_sizes/font_size = 8
text = "Annoying Blob"
